Closed Bug 878757 Opened 11 years ago Closed 11 years ago

fix getTextBeforeOffset for line start boundary

Categories

(Core :: Disability Access APIs, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla25

People

(Reporter: surkov, Assigned: surkov)

References

Details

(Keywords: access)

Attachments

(1 file)

Attached patch patchSplinter Review
      No description provided.
Attachment #757359 - Flags: review?(trev.saunders)
Blocks: 882281
No longer blocks: getText*a11y
Comment on attachment 757359 [details] [diff] [review]
patch

canceling review, replaced by bug 882281
Attachment #757359 - Flags: review?(trev.saunders)
https://hg.mozilla.org/mozilla-central/rev/f857d3e3dbd8
Status: NEW → RESOLVED
Closed: 11 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
Target Milestone: --- → mozilla25
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: