Bug 878757 - fix getTextBeforeOffset for line start boundary, r=tbsaunde